--- a/package.json
+++ b/package.json
@@ -12,12 +12,22 @@
     "test:coverage": "jest --coverage"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-native-community/netinfo": "11.3.0",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
+    "@react-navigation/stack": "^6.3.20",
+    "@sentry/react-native": "^5.9.1",
+    "@types/react": "~18.2.45",
     "expo": "~50.0.5",
+    "expo-image-picker": "~14.7.1",
     "expo-linear-gradient": "~12.7.1",
+    "expo-local-authentication": "~13.7.0",
+    "expo-router": "^5.0.6",
+    "expo-splash-screen": "^0.30.8",
     "expo-status-bar": "~1.11.1",
+    "firebase": "^10.14.1",
     "react": "18.2.0",
     "react-native": "0.73.2",
     "react-native-chart-kit": "^6.12.0",
@@ -26,13 +36,7 @@
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-vector-icons": "^10.0.3",
-    "firebase": "^10.7.0",
-    "expo-local-authentication": "~13.7.0",
-    "@react-navigation/stack": "^6.3.20",
-    "expo-image-picker": "~14.7.1",
-    "@react-native-async-storage/async-storage": "1.21.0",
-    "@react-native-community/netinfo": "11.3.0",
-    "@sentry/react-native": "^5.9.1"
+    "typescript": "^5.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
